# invoice_test_task

./: .gitignore  pyproject.toml
src/: config.py  main.py  models.py
