[tool.poetry]
name = "invoice-test-task"
version = "0.1.0"
description = ""
authors = ["Stanislav Sushkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
alembic = "^1.12.0"
sqlalchemy = "1.4.38"
aiopg = "^1.4.0"
pydantic-settings = "2.0.2"
uvicorn = "^0.23.2"
black = "^23.9.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
